k9s_project/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f1-backend
  labels:
    app: f1-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: f1-backend
  template:
    metadata:
      labels:
        app: f1-backend
    spec:
      imagePullSecrets:
        - name: ghcr-credentials

      containers:
        - name: f1-backend
          image: ghcr.io/ctrl-zzz/gridops:v0.1.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
            # - name: metrics
            #   containerPort: 9090
