k9s_project/app/clusterip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: f1-backend
spec:
  type: ClusterIP
  selector:
    app: f1-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    # - name: metrics
    #   port: 9090
    #   targetPort: 9090
