k9s_project/app/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
  labels:
    component: httproute
spec:
  parentRefs:
  - name: gateway-api # Nome del gateway
    namespace: infra-gateways
  rules:
  - backendRefs:
    - name: nginx # Nome del service di tipo ClusterIP
      port: 80
